# JPM

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: bonus_1_readme.md  part_1_README.md  part_2_readme.md
results/bonus1/dynamic_model/demo_123/: results.json
results/hybrid/zhang_lu_sparse/latest_sparse20/: results.json
results/hybrid/zhang_lu_sparse/latest_sparse40/: results.json
results/hybrid/zhang_lu_sparse/test_smoke_sparse20/: results.json
results/hybrid/zhang_lu_sparse/test_smoke_sparse40/: results.json
results/part1/: compromise_effect_tf.txt
results/part2/lu25_Fullgride_T25_J5/DGP1_T25_J5/: DGP1_T25_J5_config.json
results/part2/lu25_Fullgride_T25_J5/DGP2_T25_J5/: DGP2_T25_J5_config.json
results/part2/lu25_Fullgride_T25_J5/DGP3_T25_J5/: DGP3_T25_J5_config.json
results/part2/lu25_Fullgride_T25_J5/DGP4_T25_J5/: DGP4_T25_J5_config.json
results/part2/lu25_debug/DGP2_T25_J15/: config.json
results/part2/lu25_fullgrid_10rep/DGP1_T100_J15/: config.json
results/part2/lu25_fullgrid_10rep/DGP1_T25_J15/: config.json
results/part2/lu25_fullgrid_10rep/DGP2_T100_J15/: config.json
results/part2/lu25_fullgrid_10rep/DGP2_T25_J15/: config.json
results/part2/lu25_fullgrid_10rep/DGP3_T100_J15/: config.json
results/part2/lu25_fullgrid_10rep/DGP3_T25_J15/: config.json
results/part2/lu25_fullgrid_10rep/DGP4_T100_J15/: config.json
results/part2/lu25_fullgrid_10rep/DGP4_T25_J15/: config.json
results/part2/lu25_onecell_fast/DGP2_T25_J15/: config.json
results/part2/lu25_section4/DGP2_T25_J15/: config.json
results/part2/lu25_section4_rep10/DGP1_T25_J15/: DGP1_config.json
results/part2/lu25_section4_rep10/DGP2_T25_J15/: DGP2_config.json
results/part2/lu25_section4_rep10/DGP3_T25_J15/: DGP3_config.json
results/part2/lu25_section4_rep10/DGP4_T25_J15/: DGP4_config.json
scripts/part1/: run_all.py
scripts/part2/: test_blp.py
src/choice_learn_ext/models/deep_context/: __init__.py  config.py  data_io.py  deep_halo_core.py  deep_halo_estimator.py  layers.py  trainer.py  training.py  utils.py
src/choice_learn_ext/models/lu25_sparse_shocks/: __init__.py  data_io.py  estimator.py  lu25_section4_choicelearn.py
src/jpm_q3/: __init__.py
src/jpm_q3/bonus1/: __init__.py
src/jpm_q3/bonus1/dynamic_model/: __init__.py  config.py  data.py  model.py  run_demo.py  trainer.py
src/jpm_q3/cli/: part1_experiments.py  replicate_lu25.py  run_all.py
src/jpm_q3/hybrid/: __init__.py  zhang_lu_sparse.py
src/jpm_q3/lu25/: readme.md  run_single_replication.py  sanity_checks.py
src/jpm_q3/lu25/estimators/: blp.py  shrinkage.py  shrinkage_hmc.py
src/jpm_q3/lu25/experiments/: __init__.py  archive_replicate_section4.py  format_section4_tables.py  replicate_section4.py  replicate_section4_paper_tables.py  run_single_replication_debug.py
src/jpm_q3/lu25/simulation/: dgp.py  market.py  simulate.py
src/jpm_q3/zhang25/experiments/: __init__.py  attraction_effect_tf.py  attraction_effect_torch.py  compromise_effect_tf.py  decoy_effect.py  influence_map.py  (+4 more)
tests/bonus/: test_bonus1_dynamic_smoke.py
tests/part1/: test_authors_mode_basic_unittest.py  test_data_io_unittest.py  test_decoy_effect.py  test_equivariance.py  test_masking.py  test_overfit_tiny.py  test_padding_invariance_unittest.py  test_smoke.py  test_wrapper_basic.py  test_wrapper_unittest.py
tests/part2/: test_zhang_lu_sparse.py  test_zhang_lu_sparse_smoke.py
(+3 files in other folders)
